Bug 132494 - Trying to save SVG image from presentation/drawing causes LibO to use 100% cpu and lock up
Summary: Trying to save SVG image from presentation/drawing causes LibO to use 100% cp...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
6.2.0.3 release
Hardware: All All
: medium major
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0
Keywords: implementationError, perf
Depends on:
Blocks: Performance CPU-AT-100%
  Show dependency treegraph
 
Reported: 2020-04-28 15:44 UTC by Callegar
Modified: 2025-09-30 19:30 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
test case (72.36 KB, application/vnd.oasis.opendocument.presentation)
2020-04-28 15:44 UTC, Callegar
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Callegar 2020-04-28 15:44:00 UTC
Description:
LibO lets you save images that are embedded in presentations and drawings.

The saving of SVG images has issues, though.

1) In the SVG options dialogue, rapidly changing the saved image size (e.g., by repeatedly clicking on the small arrows to increment/decrement the width/height of the saved image causes LibO to use 100% of the CPU and lock up.

2) The file size reported in the SVG options dialogue is always 0.

Steps to Reproduce:
1. Open the test document
2. Select the image, right click, click "save..."
3. Define a filename in the Image export dialogue, assure that the filter is set to "SVG - Scalable Vector Graphics" and the filename ends by ".svg".
4. Press save and see the SVG options dialog open
5. Note that the Information bit says "The file size is 0.0 KB"
6. Rapidly press multiple time the up arrow in the width box

Actual Results:
LibO freezes, cpu usage goes up to 100%

Expected Results:
LibO should not freeze.
File size information should account for the actual svg file size.


Reproducible: Always


User Profile Reset: No



Additional Info:
Note that if the image size is updated "slowly" in the SVG options window, LibO can actually survive and save the svg image.


[Information automatically included from LibreOffice]
Locale: en-US
Module: PresentationDocument
[Information guessed from browser]
OS: Linux (All)
OS is 64bit: yes
Comment 1 Callegar 2020-04-28 15:44:22 UTC
Created attachment 160033 [details]
test case
Comment 2 Buovjaga 2020-08-28 19:44:46 UTC
Repro on Win and Linux. The options dialog did not always exist. In 6.2, spin buttons were added to the dialog. If before the spin buttons existed, you just wrote into the fields, no freeze happened.
Comment 3 QA Administrators 2022-08-29 06:43:56 UTC Comment hidden (obsolete)
Comment 4 Roman Kuznetsov 2022-09-16 15:29:54 UTC
Still repro in

Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: bff60eadeac348024849d710690435ee9580831b
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: threaded
Comment 5 Commit Notification 2025-09-30 16:24:12 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a064535cb2b65d5042f85e571fe3559820855479

tdf#132494 dont resize SVG on the fly when exporting from drawing

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Buovjaga 2025-09-30 19:30:05 UTC
Verified, thanks

Arch Linux 64-bit
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a064535cb2b65d5042f85e571fe3559820855479
CPU threads: 8; OS: Linux 6.16; UI render: default; VCL: gtk3
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Built on 30 September 2025