tdf#132494 dont resize SVG on the fly when exporting from drawing

or we potentially spend vast amounts of time doing resizing work.

I am not convinced that this estimated file size thing is a good idea for
most of the export formats, but for now, lets just do the minimal fix.

Change-Id: Iba986196c060246598d455823886d3f4c7496133
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191668
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>